# old-time-tunes

./: .gitignore  README.md  apphosting.yaml  migrations.json  nx.json  package-lock.json  package.json  project.json  pyproject.toml  tsconfig.base.json
apps/old-time-tunes-playback/: jest.config.ts  project.json
apps/old-time-tunes-playback-e2e/: jest.config.ts  project.json
apps/old-time-tunes-playback/src/app/: app.controller.ts  model.json
apps/old-time-tunes-player/: .eslintrc.json  jest.config.ts  project.json
apps/old-time-tunes-player-e2e/: project.json  tsconfig.json
apps/old-time-tunes-player-e2e/src/e2e/: app.cy.ts
apps/old-time-tunes-player/src/: index.html
apps/old-time-tunes-player/src/app/: app.component.spec.ts  app.component.ts
apps/ott-app/: .eslintrc.json  apphosting.yaml  jest.config.ts  next.config.js  project.json  tsconfig.json
apps/ott-app-e2e/: playwright.config.ts  project.json
apps/ott-app/src/app/: layout.tsx  page.tsx
apps/ott-bp-api/: README.md  project.json
apps/ott-bp-api/ott_bp_api/: main.py
apps/ott-bp-api/tests/: test_hello.py
apps/ott-notes-api/: jest.config.ts  project.json  tsconfig.app.json  webpack.config.cjs
apps/ott-notes-api/src/app/: app.controller.ts
apps/ott-notes-viewer-poc/: .eslintrc.json  jest.config.ts  project.json
apps/ott-notes-viewer-poc/src/: index.html
apps/ott-notes-viewer-poc/src/app/: app.component.ts  (+1 more)
libs/node/audio-2-notes/: README.md  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/ts/notes/: README.md  jest.config.ts  package.json  project.json
(+4 files in other folders)
