[tool.poetry]
name = "old-time-tunes"
version = "0.1.0"
description = ""
authors = ["David <25187726+david-shortman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
numpy = "1.24.3"
basic-pitch = "0.4.0"
soundfile = "^0.12.1"
python-multipart = "^0.0.17"
tensorflow-macos = "2.15.0"
tensorflow-metal = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
